Fix header details tags showing ">" marker on safari!

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -270,6 +270,10 @@
       content: "";
     }
 
+    summary::-webkit-details-marker {
+      display: none;
+    }
+
     label {
       background: transparent;
       border: none;
@@ -605,6 +609,10 @@ div.search-facet:focus-within {
   summary::marker {
     content: "";
   }
+
+  summary::-webkit-details-marker {
+    display: none;
+  }
 }
 
 .hamburger-component,
@@ -630,6 +638,10 @@ div.search-facet:focus-within {
 
   summary::marker {
     content: "";
+  }
+
+  summary::-webkit-details-marker {
+    display: none;
   }
 
   summary {
